feature/implement refresh token functionality and update security configuration